install extra modules on Linux

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y libgmp-dev libmpfr-dev
+        cpanm --notest Math::GMPz Math::LongDouble Math::GMPq Test::Pod
 
     - name: Install Modules
       run: |
